--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/marginBottomAndHeightNavigation"
         android:layout_alignParentBottom="true"
         android:scrollIndicators="left"
         app:layout_constraintBottom_toBottomOf="parent"
