--- a/app/src/main/res/layout/cost_history_item.xml
+++ b/app/src/main/res/layout/cost_history_item.xml
@@ -6,10 +6,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:background="@drawable/ic_corner_rounding"
     android:orientation="vertical"
-    android:padding="5dp"
+    android:padding="2dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintCircleRadius="5dp"
     app:layout_constraintEnd_toEndOf="parent"
@@ -21,11 +23,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/open_sans_extrabold"
-        android:textColor="@color/white"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/roboto_medium"
         android:text="07.07.2022"
-        android:textSize="24sp"
+        android:textColor="@color/purple_700"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,10 +38,10 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/open_sans_condensed_light"
+        android:fontFamily="@font/roboto_medium"
         android:text="Другое"
-        android:textSize="24sp"
+        android:textColor="@color/purple_700"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateExpense" />
@@ -51,10 +53,10 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="5dp"
-        android:fontFamily="@font/open_sans_condensed_light"
+        android:fontFamily="@font/roboto_medium"
         android:text="250"
-        android:textSize="24sp"
-        android:textColor="@color/white"
+        android:textColor="@color/purple_700"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/typeOperation"
@@ -64,12 +66,12 @@
         android:id="@+id/typeOperation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/open_sans_extrabold"
+        android:fontFamily="@font/roboto_medium"
         android:text="@string/type_operation_expense"
-        android:textSize="24sp"
+        android:textColor="@color/purple_700"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
