--- a/app/src/main/res/layout/fragment_money_tracker.xml
+++ b/app/src/main/res/layout/fragment_money_tracker.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="moneyTrackViewModel"
-            type="com.example.moneytracking.viewmodels.MoneyTrackerViewModel" />
+            type="com.example.moneytracking.viewmodels.moneytrack.MoneyTrackerViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +20,9 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:color="?attr/colorError"
+            android:fontFamily="@font/open_sans_condensed_bold"
             android:hint="@string/drop_down_menu_label"
+
             app:errorIconDrawable="@drawable/mtrl_ic_error"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,6 +35,7 @@
                 android:id="@+id/AutoCompleteTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/open_sans_condensed_bold"
                 android:inputType="none" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -42,6 +45,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/open_sans_condensed_bold"
             android:color="?attr/colorError"
             android:hint="@string/text_field_sum_expense_label"
             app:errorIconDrawable="@drawable/mtrl_ic_error"
@@ -57,6 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
+                android:fontFamily="@font/open_sans_condensed_bold"
                 tools:text="0" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -67,12 +72,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn_add_expensive"
+            android:fontFamily="@font/open_sans_condensed_bold"
             app:icon="@drawable/ic_add_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/TextFieldSumExpense"
             app:layout_constraintVertical_bias="0.050000012" />
+
+        <TextView
+            android:id="@+id/textAllSum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/open_sans_condensed_bold"
+            android:text="5000"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.49"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnAddExpenses"
+            app:layout_constraintVertical_bias="0.06999999" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
