--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,6 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/open_sans_condensed_light</item>
         <item>@font/open_sans_extrabold</item>
+        <item>@font/roboto_medium</item>
     </array>
 </resources>
