--- a/app/src/main/res/layout/list_item_category_expensive.xml
+++ b/app/src/main/res/layout/list_item_category_expensive.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="end"
-    android:fontFamily="@font/open_sans_condensed_bold"
+    android:fontFamily="@font/roboto_medium"
     android:maxLines="1"
     android:padding="16dp"
     android:textAppearance="?attr/textAppearanceSubtitle1" />
