--- a/app/src/main/res/layout/fragment_money_tracker.xml
+++ b/app/src/main/res/layout/fragment_money_tracker.xml
@@ -12,9 +12,11 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:ignore="MissingClass">
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -28,8 +30,8 @@
                 style="@style/Widget.MaterialComponents.Button.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto_medium"
                 android:layout_margin="1dp"
+                android:fontFamily="@font/roboto_medium"
                 android:text="Сегодня"
                 android:textSize="10sp" />
 
@@ -38,8 +40,8 @@
                 style="@style/Widget.MaterialComponents.Button.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto_medium"
                 android:layout_margin="1dp"
+                android:fontFamily="@font/roboto_medium"
                 android:text="Неделя"
                 android:textSize="10sp" />
 
@@ -57,8 +59,8 @@
                 android:id="@+id/btnSelectionToYear"
                 style="@style/Widget.MaterialComponents.Button.Icon"
                 android:layout_width="wrap_content"
-                android:layout_margin="1dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="1dp"
                 android:fontFamily="@font/roboto_medium"
                 android:text="Год"
                 android:textSize="10sp" />
@@ -88,9 +90,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
 
+            app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.050000012">
+            app:layout_constraintVertical_bias="0.023">
 
             <AutoCompleteTextView
                 android:id="@+id/AutoCompleteTextView"
@@ -138,7 +141,7 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnAddExpenses"
-            app:layout_constraintVertical_bias="0.314" />
+            app:layout_constraintVertical_bias="0.167" />
 
         <Button
             android:id="@+id/btnAddExpenses"
@@ -152,7 +155,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/TextFieldSumExpense"
-            app:layout_constraintVertical_bias="0.050000012" />
+            app:layout_constraintVertical_bias="0.014" />
 
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/piechart"
+            android:layout_width="0dp"
+            android:layout_height="400dp"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.454"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textAllSum"
+            app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
