--- a/app/src/main/res/values/category_expenses.xml
+++ b/app/src/main/res/values/category_expenses.xml
@@ -12,6 +12,6 @@
         <item>Машина</item>
         <item>Долг/Кредиты</item>
         <item>Аренда жилья</item>
-        <item>Другое</item>
+        <item>Прочее</item>
     </string-array>
 </resources>
