finish stable version 2, refactoring code and add new screen home

--- a/app/src/main/res/layout/fragment_cost_history.xml
+++ b/app/src/main/res/layout/fragment_cost_history.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="costHistoryViewModel"
-            type="com.example.moneytracking.viewmodels.costhistory.CostHistoryViewModel" />
+            type="com.example.moneytracking.ui.costhistory.CostHistoryViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
