--- a/app/src/main/res/layout/fragment_money_tracker.xml
+++ b/app/src/main/res/layout/fragment_money_tracker.xml
@@ -7,75 +7,12 @@
 
         <variable
             name="moneyTrackViewModel"
-            type="com.example.moneytracking.viewmodels.moneytrack.MoneyTrackerViewModel" />
+            type="com.example.moneytracking.ui.moneytrack.MoneyTrackerViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="MissingClass">
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toTopOf="@+id/textAllSum"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnAddExpenses">
-
-            <Button
-                android:id="@+id/btnSelectionToDay"
-                style="@style/Widget.MaterialComponents.Button.Icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Сегодня"
-                android:textSize="10sp" />
-
-            <Button
-                android:id="@+id/btnSelectionToWeek"
-                style="@style/Widget.MaterialComponents.Button.Icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Неделя"
-                android:textSize="10sp" />
-
-            <Button
-                android:id="@+id/btnSelectionToMonth"
-                style="@style/Widget.MaterialComponents.Button.Icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Месяц"
-                android:textSize="10sp" />
-
-            <Button
-                android:id="@+id/btnSelectionToYear"
-                style="@style/Widget.MaterialComponents.Button.Icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Год"
-                android:textSize="10sp" />
-
-            <Button
-                android:id="@+id/btnAllSumExpense"
-                style="@style/Widget.MaterialComponents.Button.Icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Все"
-                android:textSize="10sp" />
-
-        </LinearLayout>
+        android:layout_height="match_parent">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/menu"
@@ -130,19 +67,6 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/textAllSum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_medium"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnAddExpenses"
-            app:layout_constraintVertical_bias="0.167" />
-
         <Button
             android:id="@+id/btnAddExpenses"
             style="@style/Widget.MaterialComponents.Button.Icon"
@@ -157,16 +81,6 @@
             app:layout_constraintTop_toBottomOf="@+id/TextFieldSumExpense"
             app:layout_constraintVertical_bias="0.014" />
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/piechart"
-            android:layout_width="0dp"
-            android:layout_height="400dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textAllSum"
-            app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
