--- a/app/src/main/res/layout/fragment_cost_history.xml
+++ b/app/src/main/res/layout/fragment_cost_history.xml
@@ -11,18 +11,31 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_marginBottom="@dimen/marginBottomAndHeightNavigation"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/marginBottomAndHeightNavigation">
+
+
+        <include
+            android:id="@+id/chipsGroupPeriod"
+            layout="@layout/chips_filter_period"
+            app:layout_constraintBottom_toTopOf="@+id/recyclerViewCostHistory"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewCostHistory"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:clipToPadding="false"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+
+            app:layout_constraintTop_toBottomOf="@+id/chipsGroupPeriod"
+            tools:itemCount="28"
             tools:listitem="@layout/cost_history_item" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
