--- a/app/src/main/res/layout/fragment_add_expenses.xml
+++ b/app/src/main/res/layout/fragment_add_expenses.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="moneyTrackViewModel"
-            type="com.example.moneytracking.ui.moneytrack.MoneyTrackerViewModel" />
+            type="com.example.moneytracking.ui.addexpenses.AddExpensesViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
