--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/moneyTrackerFragment"
-        android:name="com.example.moneytracking.ui.moneytrack.MoneyTrackerFragment"
+        android:name="com.example.moneytracking.ui.addexpenses.AddExpensesFragment"
         android:label="Добавить расход"
-        tools:layout="@layout/fragment_money_tracker" >
+        tools:layout="@layout/fragment_add_expenses" >
         <action
             android:id="@+id/action_moneyTrackerFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
@@ -18,7 +18,11 @@
         android:id="@+id/costHistoryFragment"
         android:name="com.example.moneytracking.ui.costhistory.CostHistoryFragment"
         android:label="История расходов"
-        tools:layout="@layout/fragment_cost_history" />
+        tools:layout="@layout/fragment_cost_history" >
+        <action
+            android:id="@+id/action_costHistoryFragment_to_updateExpensesFragment"
+            app:destination="@id/updateExpensesFragment" />
+    </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.moneytracking.ui.home.HomeFragment"
@@ -29,5 +33,19 @@
             app:destination="@id/moneyTrackerFragment"
             app:launchSingleTop="false"
             app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/updateExpensesFragment"
+        android:name="com.example.moneytracking.ui.updateexpenses.UpdateExpensesFragment"
+        android:label="Обновить"
+        tools:layout="@layout/fragment_update_expenses" >
+        >
+
+        <action
+            android:id="@+id/action_updateExpensesFragment_to_costHistoryFragment"
+            app:destination="@id/costHistoryFragment" />
+        <argument
+            android:name="currentExpenses"
+            app:argType="com.example.moneytracking.model.MoneyTrack" />
     </fragment>
 </navigation>
