refactoring with include dagger 2

--- a/app/src/main/res/layout/fragment_add_expenses.xml
+++ b/app/src/main/res/layout/fragment_add_expenses.xml
@@ -6,7 +6,7 @@
     <data>
 
         <variable
-            name="moneyTrackViewModel"
+            name="addExpensesViewModel"
             type="com.example.moneytracking.ui.addexpenses.AddExpensesViewModel" />
     </data>
 
