--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/moneyTrackerFragment"
+        android:id="@+id/addExpensesFragment"
         android:name="com.example.moneytracking.ui.addexpenses.AddExpensesFragment"
         android:label="Добавить расход"
         tools:layout="@layout/fragment_add_expenses" >
@@ -30,7 +30,7 @@
         tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_moneyTrackerFragment"
-            app:destination="@id/moneyTrackerFragment"
+            app:destination="@id/addExpensesFragment"
             app:launchSingleTop="false"
             app:popUpToInclusive="true" />
     </fragment>
